#839 removed z-index property due to photoswipe bug in Safari

--- a/source/sass/search/_object.scss
+++ b/source/sass/search/_object.scss
@@ -198,7 +198,7 @@
       }
       .object-media-image{
         position: relative;
-        z-index: 100;
+        //z-index: 100; #839
       }
       .object-media-iiif{
         position: relative;
